# asset_skel

./: .gitmodules  CMakeLists.txt  setup.py
.github/workflows/: pip-ubuntu-22.yml
asset_skel/: __init__.py
cmake/: FindAccelerate.cmake
doc/: index.rst
extensions/: ASSET_Extensions.cpp  CMakeLists.txt
pypiwheel/: CMakeLists.txt  setup.py.in
src/: AccelerateInterface.h  CMakeLists.txt  PardisoInterface.h  TestMatrices.cpp  TestMatrices.h  fmtlib.h  main.cpp  pch.h  staticlib.cpp  staticlib.h
temp/: hello  omp_test.c
